# libgamemaps

./: .gitignore  .travis.yml  README  README.md  TODO  configure.ac  libgamemaps.pc.in
doc/: Makefile.am  gamemap.1  gamemap.xml  libgamemaps.doxygen
doxygen/: api.doxygen  full.doxygen
examples/: Makefile.am  gamemap.cpp  hello.cpp
include/camoto/: Makefile.am  gamemaps.hpp
include/camoto/gamemaps/: manager.hpp  map.hpp  map2d.hpp  maptype.hpp  util.hpp
src/: Makefile.am  base-maptype.cpp  base-maptype.hpp  fmt-map-bash.cpp  fmt-map-bash.hpp  fmt-map-ccaves-mapping.hpp  fmt-map-ccaves.cpp  fmt-map-ccaves.hpp  fmt-map-ccomic.cpp  fmt-map-ccomic.hpp  fmt-map-cosmo.cpp  fmt-map-cosmo.hpp  fmt-map-darkages.cpp  fmt-map-darkages.hpp  fmt-map-ddave.cpp  fmt-map-ddave.hpp  fmt-map-duke1.cpp  fmt-map-duke1.hpp  fmt-map-got.cpp  fmt-map-got.hpp  fmt-map-harry.cpp  fmt-map-harry.hpp  fmt-map-hocus.cpp  fmt-map-hocus.hpp  fmt-map-nukem2.cpp  fmt-map-nukem2.hpp  fmt-map-rockford.cpp  fmt-map-rockford.hpp  fmt-map-sagent-mapping.hpp  fmt-map-sagent.cpp  fmt-map-sagent.hpp  fmt-map-vinyl.cpp  fmt-map-vinyl.hpp  fmt-map-wacky.cpp  fmt-map-wacky.hpp  fmt-map-wordresc.cpp  fmt-map-wordresc.hpp  fmt-map-xargon.cpp  fmt-map-xargon.hpp  fmt-map-zone66.cpp  (+15 more)
tests/: Makefile.am  test-map-bash.cpp  test-map-ccaves.cpp  test-map-ccomic.cpp  test-map-cosmo.cpp  test-map-darkages.cpp  test-map-ddave.cpp  test-map-duke1.cpp  test-map-got.cpp  test-map-harry.cpp  test-map-hocus.cpp  test-map-jill.cpp  test-map-nukem2.cpp  test-map-rockford.cpp  test-map-sagent.cpp  test-map-vinyl.cpp  test-map-wacky.cpp  test-map-wordresc.cpp  test-map-xargon.cpp  test-map2d.cpp  test-map2d.hpp  tests.cpp  tests.hpp
