library_includedir = $(includedir)/@camoto_release@/camoto/
nobase_library_include_HEADERS = gamemaps.hpp
nobase_library_include_HEADERS += gamemaps/manager.hpp
nobase_library_include_HEADERS += gamemaps/map.hpp
nobase_library_include_HEADERS += gamemaps/maptype.hpp
nobase_library_include_HEADERS += gamemaps/map2d.hpp
nobase_library_include_HEADERS += gamemaps/util.hpp
